Tweaked repositories. Renamed packages for ui components. Changed layout for the recipe grid item

--- a/app/src/main/res/layout/activity_recipes.xml
+++ b/app/src/main/res/layout/activity_recipes.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".recipes.RecipesActivity">
+    tools:context=".ui.MainRecipesActivity">
 
     <FrameLayout
         android:id="@+id/recipes_fragment_container"
