--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -3,6 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginBottom="2dp"
     android:layout_marginTop="2dp"
     android:clickable="true"
@@ -15,21 +16,25 @@
         android:id="@+id/cv_recipe"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_margin="@dimen/text_margin"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/item_number"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_list_recipe_title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem" />
+            android:layout_marginBottom="@dimen/text_margin_half"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            tools:text="@tools:sample/lorem" />
 
         <TextView
-            android:id="@+id/content"
+            android:id="@+id/tv_list_servings"
+            android:textColor="@color/colorSecondaryText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem" />
+            android:layout_gravity="end"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            tools:text="@tools:sample/lorem" />
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
