--- a/app/src/main/res/layout-w600dp/activity_recipe_detail.xml
+++ b/app/src/main/res/layout-w600dp/activity_recipe_detail.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:baselineAligned="false"
     android:orientation="horizontal">
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <FrameLayout
         android:id="@+id/master_fragment_steps"
         android:layout_width="300dp"
         android:layout_height="match_parent"
-        tools:context=".ui.RecipeDetailActivity" />
+        tools:context=".ui.RecipeDetailActivity">
+
+    </FrameLayout>
 
     <!-- A small divider -->
     <View
@@ -23,6 +26,41 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fillViewport="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <com.google.android.exoplayer2.ui.PlayerView
+                    android:id="@+id/exo_player"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:resize_mode="fixed_width"
+                    app:show_timeout="3000" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/text_margin"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tv_sample"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textColor="@color/colorPrimaryText"
+                        tools:text="@tools:sample/lorem" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </ScrollView>
     </FrameLayout>
 
 </LinearLayout>
