--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#009688</color>
     <color name="colorPrimaryDark">#00796B</color>
+    <color name="colorPrimaryDarkTransparent">#4400796B</color>
     <color name="colorPrimaryLight">#B2DFDB</color>
     <color name="colorAccent">#8BC34A</color>
     <color name="colorText">#FFFFFF</color>
