Added a homescreen widget with all functionality

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,14 @@
     <dimen name="app_bar_height">200dp</dimen>
     <dimen name="item_width">200dp</dimen>
 
+    <dimen name="widget_padding_vertical">4dp</dimen>
+    <dimen name="widget_padding_horizontal">8dp</dimen>
+
     <bool name="is_tablet">false</bool>
+
+    <!--
+        Refer to App Widget Documentation for margin information
+        http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
+    -->
+    <dimen name="widget_margin">8dp</dimen>
 </resources>
