--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="colorSecondaryText">#757575</color>
     <color name="colorDivider">#BDBDBD</color>
     <color name="colorTransparentBg">#66000000</color>
+    <color name="colorWidgetListBg">#FFFFFF</color>
 </resources>
