Cleaned up the code

--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -9,19 +9,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center"
         android:background="@color/colorTransparentBg"
+        android:gravity="center"
         android:orientation="horizontal"
         android:paddingTop="4dp">
 
         <ImageButton
             android:id="@id/exo_play"
             style="@style/ExoMediaButton.Play"
+            android:contentDescription="@string/play"
             android:tint="@color/colorAccent" />
 
         <ImageButton
             android:id="@id/exo_pause"
             style="@style/ExoMediaButton.Pause"
+            android:contentDescription="@string/pause"
             android:tint="@color/colorAccent" />
 
     </LinearLayout>
