--- a/app/src/main/res/layout-w600dp/activity_recipe_detail.xml
+++ b/app/src/main/res/layout-w600dp/activity_recipe_detail.xml
@@ -43,6 +43,18 @@
                     app:resize_mode="fixed_width"
                     app:show_timeout="3000" />
 
+                <ImageView
+                    android:id="@+id/iv_step_thumbnail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:cropToPadding="false"
+                    android:visibility="gone"
+                    android:scaleType="fitXY"
+                    android:layout_marginTop="@dimen/text_margin"
+                    android:layout_marginBottom="@dimen/text_margin"
+                    tools:src="@tools:sample/backgrounds/scenic" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
